--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ header {
   border: solid 2px black;
   margin-left: 20%;
   margin-right: 20%;
+  font-family: 'Montserrat', sans-serif; ;
 }
 
 .title {
@@ -31,11 +32,13 @@ header {
   padding-left: 10vh;
   padding-top: 7vh;
   align-items: flex-start;
+  gap: 50px;
 }
 
 .board-section {
   display: flex;
-  gap: 100px;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .score-board {
@@ -60,10 +63,35 @@ form {
 }
 
 .board-table {
-  border: 1px solid rgb(26, 25, 25)
+  display: flex;
+  flex-direction: column;
+  height: 40vh;
+  border: 2px solid rgb(91, 88, 88);
+  margin-top: 4vh;
 }
 
+ul {
+  display: flex;
+  align-items: flex-start;
+  list-style: none;
+  flex-direction: column;
+}
 
+li {
+  margin: 0;
+  font-size: 20px;
+  line-height: 40px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.one {
+background: darkgray;
+width: 100%;
+}
 
 .add-score {
   display: flex;
