--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,8 @@ header {
   gap: 10px;
   margin-top: 5vh;
   border: solid 2px black;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: auto;
+  margin-right: auto;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -66,7 +66,6 @@ form {
 .board-table {
   display: flex;
   flex-direction: column;
-  height: 40vh;
   border: 2px solid rgb(91, 88, 88);
   margin-top: 4vh;
 }
@@ -99,4 +98,9 @@ a {
   justify-content: end;
   width: 100%;
   margin-top: 5vh;
+}
+
+.display-table-list1,
+.display-table-list3 {
+  background-color: gray;
 }
