Add style to Leaderbord of the game 'Fury Cat'¨

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ header {
   margin-left: auto;
   margin-right: auto;
   font-family: 'Montserrat', sans-serif;
+  background-color: rgb(65, 35, 94);
+  color: rgb(215, 231, 237);
 }
 
 .title {
@@ -27,12 +29,19 @@ header {
 
 .content {
   display: flex;
+  background-image: url(../src/img/cat.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position-y: bottom;
+  background-position-x: right;
   flex-direction: row;
-  align-self: start;
   padding-left: 10vh;
   padding-top: 7vh;
   align-items: flex-start;
-  gap: 50px;
+  gap: 100px;
+  border: 2px solid  rgb(155, 220, 248);
+  box-shadow: 6px 5px rgb(160, 164, 164);
+  border-radius: 10px;
 }
 
 .board-section {
@@ -60,7 +69,10 @@ header {
 }
 
 form {
-  margin-top: 20px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  padding-right: 50px;
 }
 
 .board-table {
@@ -68,6 +80,7 @@ form {
   flex-direction: column;
   border: 2px solid rgb(91, 88, 88);
   margin-top: 4vh;
+  border-radius: 10px;
 }
 
 ul {
@@ -100,7 +113,32 @@ a {
   margin-top: 5vh;
 }
 
-.display-table-list1,
-.display-table-list3 {
-  background-color: gray;
+.display-table-list:nth-child(even) {
+  background: rgb(32, 6, 59);
+  width: 100%;
+}
+
+.listscore {
+  color: aliceblue;
+}
+
+.btn-refresh {
+  cursor: pointer;
+  border-radius: 5px;
+  width: 40%;
+  font-size: 1em;
+  box-shadow: 3px 2px white;
+}
+
+input {
+  height: 6vh;
+}
+
+.btn-submit {
+  cursor: pointer;
+  border-radius: 5px;
+  width: 40%;
+  font-size: 1em;
+  box-shadow: 3px 2px white;
+  align-self: center;
 }
